@@ -1,4 +1,4 @@
-/*global jQuery window*/
+/* global jQuery window */
 jQuery(document).ready(function($) {
     'use strict';
     var ie = $.browser.msie && parseInt($.browser.version, 10);
@@ -21,7 +21,6 @@ jQuery(document).ready(function($) {
         e.preventDefault();
     });
 
-
     // #19536; hide navigation submenus if there are less than 2 of them
     var $navigation_submenus = $(".portletSubMenuHeader");
     if ($navigation_submenus && $navigation_submenus.length < 2) {
@@ -38,6 +37,14 @@ jQuery(document).ready(function($) {
     // #17633 add eea-icon class to the plone message classes
     $(".attention, .caution, .danger, .error, .hint, .important, .note, .tip, .warning").addClass('eea-icon');
 
+    // #20389 - time counter to remind editors save their work
+    // Delay can be overriten like this (value in miliseconds): $.timeoutDialog({delay: 900000});
+    try {
+        $.timeoutDialog({delay: 900000}); // set to be triggered after 15 minutes
+    }
+    catch(err) {
+        // console.log(err);
+    }
 
     // #5454 remove background for required fields that have the red square
     $(".required:contains('■')").addClass('no-bg');
